# bird-clock

./: .gitignore  Cargo.toml  README.md
data/: birds.txt
data/backup/: data.json
src/: event.rs  interface.rs  main.rs  old.main.rs  query.rs
src/data/: birds.txt
src/models/: bird.rs  clock.rs  mod.rs
