[package]
name = "bird-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
eframe = "0.20.1"
egui = "0.20.1"
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.16"
