[package]
name = "bird-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.8"
egui = "^0.20"
wgpu = "0.14.2"
egui-wgpu = "^0.20"
eframe = {version = "^0.20", features = ["wgpu"]}
rodio = "0.16.0"
